Fix searchbar overflowing at certain widths

--- a/src/component-library/outputtailwind.css
+++ b/src/component-library/outputtailwind.css
@@ -933,8 +933,8 @@ html {
   width: 2rem;
 }
 
-.w-\[50rem\] {
-  width: 50rem;
+.w-\[35rem\] {
+  width: 35rem;
 }
 
 .w-fit {
@@ -2093,11 +2093,6 @@ html {
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
 
-.blur {
-  --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -3197,6 +3192,10 @@ html {
 
   .lg\:w-96 {
     width: 24rem;
+  }
+
+  .lg\:w-\[50rem\] {
+    width: 50rem;
   }
 
   .lg\:grid-cols-2 {
